Fri Aug 12 06:17:43 GMT 2011  Olly Betts <olly@survex.com>

	* net/remoteserver.cc: Factor out throw_read_only() function.

Fri Aug 12 06:17:01 GMT 2011  Olly Betts <olly@survex.com>

	* common/noreturn.h: Add comment showing how to use XAPIAN_NORETURN
	  macro.

Sat Aug 06 05:15:53 GMT 2011  Olly Betts <olly@survex.com>

	* api/positioniterator.cc,api/postingsource.cc,api/valueiterator.cc,
	  common/serialise.h,include/xapian/positioniterator.h,
	  include/xapian/postingsource.h: Fix new warnings from -Wshadow with
	  GCC 4.6.  These warnings are when a variable name "shadows" a
	  typename, which doesn't seem problematic in general, but the only
	  alternative seems to be to disable -Wshadow entirely, and it is
	  useful in other cases.

Thu Aug 04 07:57:09 GMT 2011  Olly Betts <olly@survex.com>

	* backends/dbfactory_remote.cc,docs/deprecation.rst,
	  include/xapian/dbfactory.h,include/xapian/types.h: Deprecate
	  Xapian::timeout in favour of POSIX type useconds_t.

Thu Aug 04 04:04:45 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/termgenerator.h,
	  queryparser/termgenerator_internal.cc: Rename weight parameter to
	  wdf_inc, which much better describes what it does, and avoids a
	  -Wshadow warning with GCC 4.6.

Thu Aug 04 04:03:37 GMT 2011  Olly Betts <olly@survex.com>

	* api/registry.cc: Rename weight variable to weighting_scheme to avoid
	  -Wshadow warning.

Wed Aug 03 23:13:36 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: -Wshadow gives bogus warnings with 4.0 (at least on Mac
	  OS X), so disable it for GCC < 4.1 (like the comments suggest we
	  already did!)

Wed Aug 03 22:53:55 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Enable -fshow-column for GCC - things like vim's
	  quickfix mode will then jump to the appropriate column for a
	  compiler error or warning, not just the appropriate line.

Wed Aug 03 22:13:26 GMT 2011  Olly Betts <olly@survex.com>

	* api/omdocument.cc,backends/brass/brass_database.cc,